# commons

./: pom.xml
adminui/: pom.xml
annotated-stylesheets/: annotated-synapse.xsl  annotated-wsdl.xsl  annotated-wsdl2.xsl  annotated-xsd.xsl  readme.htm
archive-validators/: pom.xml
authenticator/: pom.xml
balana/: README.txt  pom.xml
bpel/: bin-assembly.xml  pom.xml  readme.txt
caching/: pom.xml
charon/: pom.xml
ciphertool/: pom.xml
codegen/: pom.xml
data-services/: README.txt  pom.xml
dynamic-codegen/: pom.xml
dynamic-response/: pom.xml
eventing/: pom.xml
im-wrapper/: pom.xml
ksb/: pom.xml
mercury/: NOTICE  README.txt  pom.xml  release-note.txt  release-notes.html
mex/: pom.xml
monitor/: pom.xml
ode/: Buildfile  pom.xml
ode_trunk/: pom.xml
opencsv-1.8/: pom.xml
openjpa/: pom.xml
openjpa-2.2.0/: pom.xml
opensaml-1.1.406/: .classpath  .cvsignore  .project  build.xml
pwprovider/: pom.xml
qa/wsf/php/TestFramework/: 11axis2c_tests.xml  TestUtilities.pm  axis2c_test_module.pm  axis2c_tests.xml  configure.in  run_php_test.pl  start.sh  tests.loog
sandesha2-persistence/: pom.xml
secret-provider/: pom.xml
securevault/: pom.xml
siddhi/: README.txt  pom.xml
siddhi2/: README.txt  pom.xml
statistics/: pom.xml
swig/: WSFC.i  wsf_constants.i  wsf_inlines.i  wsf_ruby.i
throttle/: pom.xml
tracer/: pom.xml
usermanager/: build.xml  pom.xml
utils/: pom.xml
wsdl-converter/: pom.xml
wsdlc/src/: Makefile.am  api.txt  data.c  data_template.c  data_util.c  memory.txt  parser.c  type_map.c  util.c  wsdl_mode.c  xslt.c
(+10847 files in other folders)
