ENABLE_SSL = 0
ENABLE_LIBCURL= 1
ENABLE_GUTHTHILA = 0
LIBXML2_BIN_DIR = C:\xml\libxml2-2.6.23.win32
ICONV_BIN_DIR = C:\xml\iconv-1.9.1.win32
ZLIB_BIN_DIR= C:\xml\zlib-1.2.3.win32
APACHE_BIN_DIR = C:\apache2.2
LIBXSLT_BIN_DIR = C:\xml\libxslt-1.1.17.win32
APACHE_VERSION_IS_2_0_59 = 0
OPENSSL_BIN_DIR = C:\OpenSSL
LIBCURL_BIN_DIR = C:\xml\libcurl-7.15.1-msvc-win32-ssl-0.9.8a-zlib-1.2.3
RELEASE_VER = 1.0.0
DEBUG = 1

## to use apache 2.2.3 , use  APACHE_VERSION_IS_2_0_59 = 0
## to build with debug symbols use DEBUG=1
